# skeleton-parallel

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  install.sh  skeleton-combo
.github/: copilot-instructions.md
.github/agents/: Explore.agent.md  conflict-resolver.agent.md  doctor.agent.md  dto-guardian.agent.md  (+12 more)
.skeleton-dev/: TASK_PROMPT.md  events.jsonl  plan-index.json  run-status.json
app/: README.md
config/: phases.yaml  skeleton.yaml  skeleton.yaml.template
contracts/: README.md  __init__.py
database/: README.md  schema_template.sql
docs/: AGENTS_AND_SKILLS.md  PARALLEL_DEV.md  PLAN.md  PROGRESS_REPORT.md  STARTER_GUIDE.md  architecture.md  db_adapter_spec.md  dto_contracts.md  implementation_roadmap.md  orchestrator_spec.md
drivers/: registry.yaml
router/: 9router-pin.json  oauth-guide.md  wrap.sh
scripts/: run_parallel.sh  skeleton-run.sh
templates/python/: .gitignore  pyproject.toml  requirements.txt
templates/python/app/: main.py
templates/python/app/modules/: __init__.py
templates/python/app/modules/health/: __init__.py
templates/python/app/modules/health/endpoint/: http.py
templates/python/app/modules/health/feature/check/: __init__.py
templates/python/app/modules/health/integration/: test_health.py
templates/python/app/modules/health/port/: __init__.py
templates/python/app/orchestrator/: __init__.py
templates/python/config/: config.yaml
templates/python/contracts/: __init__.py
templates/python/database/: adapter.py
templates/python/database/engines/: __init__.py
templates/python/tests/: conftest.py
(+133 files in other folders)
